# agent-task-consensus

./: README.md  agent_task.py  agent_task_runner.py  pyproject.toml
agent_task/: __init__.py  cli.py  core.py  prompts.py
agent_task_consensus.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py
